# GeodesicActivContour

./: .gitignore  CMakeLists.txt  Makefile  Point.cpp  Point.hpp  README.md  Snake.cpp  Snake.hpp  chamferDistance.cpp  chamferDistance.hpp  main  main.cpp
include/: ChamferDistance.hpp  Point.hpp  Snake.hpp  chamferDistance.hpp
src/: ChamferDistance.cpp  Point.cpp  Snake.cpp  chamferDistance.cpp  main.cpp
