CMAKE_MINIMUM_REQUIRED(VERSION 3.13)
PROJECT(activ_contour)

FIND_PACKAGE(PkgConfig REQUIRED)
PKG_CHECK_MODULES(MLV REQUIRED IMPORTED_TARGET MLV)

SET(INCLUDE_DIR ${CMAKE_SOURCE_DIR}/include/)
SET(SRC_DIR ${CMAKE_SOURCE_DIR}/include/)

INCLUDE_DIRECTORIES(
    ${INCLUDE_DIR}
)

FILE(GLOB_RECURSE SOURCE_FILES ${CMAKE_SOURCE_DIR}/src/*.cpp)
FILE(GLOB_RECURSE HEADER_FILES ${CMAKE_SOURCE_DIR}/include/*.hpp)


ADD_EXECUTABLE(activ_contour ${SOURCE_FILES} ${HEADER_FILES})

TARGET_LINK_LIBRARIES(activ_contour PUBLIC
    PkgConfig::MLV)
